# Sentiment_Analysis

./: .dockerignore  .gitignore  Dockerfile  README.md  Sentiment Analysis.ipynb  dockerfile  notes  pyproject.toml  readme.txt  requirements.txt  sample_trained_model.pickle
.devcontainer/: devcontainer.json
models/: sample_trained_model.pickle
notebooks/: Sentiment Analysis.ipynb
src/: app_str.py  data_processing.py  features.py  inference.py  main.py  modeling.py  myapp.py  myapp_cld.py  myapp_lc.py  server.py
src/mlruns/0/: meta.yaml
src/mlruns/0/88167668597d4acfaba12a71feb47861/: meta.yaml
src/mlruns/0/88167668597d4acfaba12a71feb47861/metrics/: lr_test_accuracy  lr_train_accuracy  nb_test_accuracy  nb_train_accuracy
src/mlruns/0/88167668597d4acfaba12a71feb47861/params/: lr_best_C  nb_best_alpha
src/mlruns/0/88167668597d4acfaba12a71feb47861/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.name
src/mlruns/0/a7e8b111695e4d8ab6bb34b274924d3c/: meta.yaml
src/mlruns/0/a7e8b111695e4d8ab6bb34b274924d3c/metrics/: test_accuracy  train_accuracy
src/mlruns/0/a7e8b111695e4d8ab6bb34b274924d3c/params/: alpha
src/mlruns/0/a7e8b111695e4d8ab6bb34b274924d3c/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.git.commit
src/mlruns/0/c9cb78b634f04195ac6e55ee641744f2/: meta.yaml
src/mlruns/0/c9cb78b634f04195ac6e55ee641744f2/metrics/: lr_test_accuracy  lr_train_accuracy  nb_test_accuracy  (+1 more)
src/mlruns/models/MNB/: meta.yaml
tests/: test_data_processing.py  test_features.py  test_inference.py  test_modeling.py  test_server.py
(+19 files in other folders)
