[tool.poetry]
name = "sentiment analysis cw1"
version = "0.1.0"
description = ""
authors = ["ash-sha <aswathshakthi@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.115.5"
nltk = "3.9.1"
pandas = "2.2.3"
scikit-learn = "1.5.2"
pydantic = "2.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
